--- a/bruteforcer/Cargo.toml
+++ b/bruteforcer/Cargo.toml
@@ -7,3 +7,4 @@ author = "Kendall Tauser"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+libc = "0.2.153"
