--- a/bruteforcer/Cargo.toml
+++ b/bruteforcer/Cargo.toml
@@ -7,4 +7,6 @@ author = "Kendall Tauser"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "4.5.3", features = ["derive"] }
+itertools = "0.12.1"
 libc = "0.2.153"
